--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--body bgcolor="#80A0FF"-->
 <p>
 </p><p>
-<img align="MIDDLE", width="200" src="./test_files/photo.pdf" alt="photo">
+<img align="MIDDLE", width="200" src="./pic/photo.pdf" alt="photo">
     </p><p>
     </p><h1> Ye-Ling Zhou
     </h1>
